// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlanGroupAccordionItem should render expanded item correctly 1`] = `
<div>
  <div
    data-orientation="vertical"
  >
    <div
      data-orientation="vertical"
      data-state="closed"
    >
      <div
        class="relative rounded-sm border p-sm xxxl:p-base focus-visible:!border-secondary-500 focus-visible:border border-primary-500 mb-sm xxxl:mb-base"
      >
        <button
          aria-controls="radix-2"
          aria-expanded="false"
          class="text-start w-full flex gap-base xxxl:gap-md focus-visible:outline-offset-4 mb-base xxxl:mb-md cursor-pointer"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="closed"
          id="radix-2"
          type="button"
        >
          <div
            class="transition-all ease-out p-xxs shrink-0 w-[132px] h-[132px] xxxl:w-[172px] xxxl:h-[172px] rotate-[360deg] duration-[500ms]"
          >
            <div
              class="recharts-responsive-container"
              style="width: 100%; height: 100%; min-width: 0;"
            />
          </div>
          <div
            class="w-full focus-visible:!outline-secondary-500"
          >
            <div
              class="flex gap-base transition-[margin] mb-sm xxxl:mb-base"
            >
              <div
                class="mr-auto"
              >
                <h6
                  class="font-bold leading-base mb-xs max-w-[640px] xxxl:max-w-[840px]"
                >
                  NV - PERFORMANCE STANDARD 1.1 : DEMONSTRATE KNOWLEDGE OF THE HISTORY OF THE GRAPHIC  DESIGN FIELD 
                </h6>
                <div>
                  <div
                    class="flex"
                  >
                    <div
                      class="flex items-center justify-center relative after:absolute pe-[20px] xxxl:pe-[28px] after:bg-neutral-300 after:h-xxs after:w-xxs after:rounded-full after:right-xs xxxl:after:right-x last-of-type:after:hidden last-of-type:pe-0"
                    >
                      <div
                        class="flex"
                      >
                        <div
                          class="flex align-center justify-center grow-0 shrink-0 bg-white outline outline-1 outline-neutral-300 rounded-xs mr-xxs text-neutral-700 p-xxs"
                          data-testid="icon"
                        >
                          <div
                            class="h-sm w-sm"
                          />
                        </div>
                      </div>
                      <div
                        class="font-medium leading-lg mr-xxxs text-xxs xxxl:text-xs"
                      >
                        0
                        %
                      </div>
                      <div
                        class="text-xxs xxxl:text-xs leading-sm flex items-center text-font-secondary"
                      >
                        (
                        <div
                          class="flex"
                        >
                          <div
                            class="flex align-center justify-center grow-0 shrink-0 mr-xxxs"
                            data-testid="icon"
                          >
                            <div
                              class="h-x w-x"
                            />
                          </div>
                        </div>
                        0
                        )
                      </div>
                    </div>
                    <div
                      class="flex items-center justify-center relative after:absolute pe-[20px] xxxl:pe-[28px] after:bg-neutral-300 after:h-xxs after:w-xxs after:rounded-full after:right-xs xxxl:after:right-x last-of-type:after:hidden last-of-type:pe-0"
                    >
                      <div
                        class="flex"
                      >
                        <div
                          class="flex align-center justify-center grow-0 shrink-0 bg-white outline outline-1 outline-neutral-300 rounded-xs mr-xxs text-secondary-500 p-xxs"
                          data-testid="icon"
                        >
                          <div
                            class="h-sm w-sm"
                          />
                        </div>
                      </div>
                      <div
                        class="font-medium leading-lg mr-xxxs text-xxs xxxl:text-xs"
                      >
                        0
                        %
                      </div>
                      <div
                        class="text-xxs xxxl:text-xs leading-sm flex items-center text-font-secondary"
                      >
                        (
                        <div
                          class="flex"
                        >
                          <div
                            class="flex align-center justify-center grow-0 shrink-0 mr-xxxs"
                            data-testid="icon"
                          >
                            <div
                              class="h-x w-x"
                            />
                          </div>
                        </div>
                        0
                        )
                      </div>
                    </div>
                    <div
                      class="flex items-center justify-center relative after:absolute pe-[20px] xxxl:pe-[28px] after:bg-neutral-300 after:h-xxs after:w-xxs after:rounded-full after:right-xs xxxl:after:right-x last-of-type:after:hidden last-of-type:pe-0"
                    >
                      <div
                        class="flex"
                      >
                        <div
                          class="flex align-center justify-center grow-0 shrink-0 bg-white outline outline-1 outline-neutral-300 rounded-xs mr-xxs text-success-500 p-xxs"
                          data-testid="icon"
                        >
                          <div
                            class="h-sm w-sm"
                          />
                        </div>
                      </div>
                      <div
                        class="font-medium leading-lg mr-xxxs text-xxs xxxl:text-xs"
                      >
                        100
                        %
                      </div>
                      <div
                        class="text-xxs xxxl:text-xs leading-sm flex items-center text-font-secondary"
                      >
                        (
                        <div
                          class="flex"
                        >
                          <div
                            class="flex align-center justify-center grow-0 shrink-0 mr-xxxs"
                            data-testid="icon"
                          >
                            <div
                              class="h-x w-x"
                            />
                          </div>
                        </div>
                        1
                        )
                      </div>
                    </div>
                    <div
                      class="flex items-center justify-center relative after:absolute pe-[20px] xxxl:pe-[28px] after:bg-neutral-300 after:h-xxs after:w-xxs after:rounded-full after:right-xs xxxl:after:right-x last-of-type:after:hidden last-of-type:pe-0"
                    >
                      <div
                        class="flex"
                      >
                        <div
                          class="flex align-center justify-center grow-0 shrink-0 bg-white outline outline-1 outline-neutral-300 rounded-xs mr-xxs text-danger-500 p-xxs"
                          data-testid="icon"
                        >
                          <div
                            class="h-sm w-sm"
                          />
                        </div>
                      </div>
                      <div
                        class="font-medium leading-lg mr-xxxs text-xxs xxxl:text-xs"
                      >
                        0
                        %
                      </div>
                      <div
                        class="text-xxs xxxl:text-xs leading-sm flex items-center text-font-secondary"
                      >
                        (
                        <div
                          class="flex"
                        >
                          <div
                            class="flex align-center justify-center grow-0 shrink-0 mr-xxxs"
                            data-testid="icon"
                          >
                            <div
                              class="h-x w-x"
                            />
                          </div>
                        </div>
                        0
                        )
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex items-center gap-sm xxxl:gap-base"
              >
                <div
                  class="flex justify-center items-center font-medium text-xxs xxxl:text-xs"
                >
                  <div
                    class="me-xxs xxxl:me-xs"
                  >
                    Statements:
                  </div>
                  <div
                    class="flex justify-center items-center bg-neutral-200 group-hover:bg-white rounded-full min-w-[24px] min-h-[24px] xxxl:min-w-[32px] xxxl:min-h-[32px] px-xs py-xxs"
                  >
                    1
                  </div>
                </div>
                <div
                  class="flex"
                >
                  <div
                    class="flex align-center justify-center grow-0 shrink-0 !bg-white transition-colors !rounded-sm !border-white focus-visible:!border-primary-500 rotate-180 p-xxs"
                    data-testid="icon"
                  >
                    <div
                      class="h-base w-base"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex flex-col gap-xs xxxl:gap-sm max-w-[680px] xxxl:max-w-[840px]"
              style="height: auto; opacity: 0;"
            >
              <div
                class="font-bold text-xxxs xxxl:text-xxs uppercase"
              >
                Description:
              </div>
              <div
                class="text-font-secondary leading-lg text-xxs xxxl:text-xs"
              >
                <div
                  class="injected-content"
                >
                  <p>
                    This performance standard and its performance indicators relate back to Content Standard 1.0: Demonstrate Knowledge of the Graphics Industry. 
                  </p>
                </div>
              </div>
            </div>
          </div>
        </button>
        <div
          aria-labelledby="radix-2"
          data-orientation="vertical"
          data-state="closed"
          hidden=""
          id="radix-2"
          role="region"
          style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
        />
        <button
          aria-controls="radix-2"
          aria-expanded="false"
          class="flex items-center justify-center transition-colors rounded-sm border border-transparent cursor-pointer focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-[3px] !border-primary-500 text-primary-500 hover:bg-primary-200 outline-primary-500  w-md h-md !rounded-full absolute bottom-0 left-1/2 translate-y-1/2 -translate-x-1/2 bg-white"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="closed"
          data-testid="icon-button"
          id="radix-2"
          type="button"
        >
          <div
            class="flex"
          >
            <div
              class="flex align-center justify-center grow-0 shrink-0"
              data-testid="icon"
            >
              <div
                class="h-base w-base"
              />
            </div>
          </div>
        </button>
      </div>
      ,
    </div>
  </div>
</div>
`;

exports[`PlanGroupAccordionItem should render loading state correctly 1`] = `
<div>
  <div
    data-orientation="vertical"
  >
    <div
      data-orientation="vertical"
      data-state="closed"
    >
      <div
        class="relative rounded-sm border border-neutral-300 p-sm xxxl:p-base focus-visible:!border-secondary-500 focus-visible:border"
      >
        <button
          aria-controls="radix-0"
          aria-expanded="false"
          class="text-start w-full flex gap-base xxxl:gap-md focus-visible:outline-offset-4"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="closed"
          id="radix-0"
          type="button"
        >
          <div
            class="transition-all ease-out p-xxs shrink-0 w-[56px] h-[56px] rotate-[0deg] duration-[300ms]"
          >
            <div
              class="skeleton-rectangle skeletonRectangle radius-md height-full-height width-full-width darker animated"
            />
          </div>
          <div
            class="w-full focus-visible:!outline-secondary-500"
          >
            <div
              class="flex gap-base transition-[margin]"
            >
              <div
                class="mr-auto"
              >
                <h6
                  class="font-bold leading-base mb-xs max-w-[640px] xxxl:max-w-[840px]"
                >
                  <div
                    class="w-[120px]"
                  >
                    <div
                      class="skeleton-rectangle skeletonRectangle radius-md height-auto width-full-width darker animated"
                    />
                  </div>
                </h6>
                <div>
                  <div
                    class="flex"
                  >
                    <div
                      class="flex items-center justify-center relative after:absolute pe-[20px] xxxl:pe-[28px] after:bg-neutral-300 after:h-xxs after:w-xxs after:rounded-full after:right-xs xxxl:after:right-x last-of-type:after:hidden last-of-type:pe-0"
                    >
                      <div
                        class="flex"
                      >
                        <div
                          class="flex align-center justify-center grow-0 shrink-0 bg-white outline outline-1 outline-neutral-300 rounded-xs mr-xxs text-neutral-700 p-xxs"
                          data-testid="icon"
                        >
                          <div
                            class="h-sm w-sm"
                          />
                        </div>
                      </div>
                      <div
                        class="w-lg"
                      >
                        <div
                          class="skeleton-rectangle skeletonRectangle radius-md height-auto width-full-width darker animated"
                        />
                      </div>
                    </div>
                    <div
                      class="flex items-center justify-center relative after:absolute pe-[20px] xxxl:pe-[28px] after:bg-neutral-300 after:h-xxs after:w-xxs after:rounded-full after:right-xs xxxl:after:right-x last-of-type:after:hidden last-of-type:pe-0"
                    >
                      <div
                        class="flex"
                      >
                        <div
                          class="flex align-center justify-center grow-0 shrink-0 bg-white outline outline-1 outline-neutral-300 rounded-xs mr-xxs text-secondary-500 p-xxs"
                          data-testid="icon"
                        >
                          <div
                            class="h-sm w-sm"
                          />
                        </div>
                      </div>
                      <div
                        class="w-lg"
                      >
                        <div
                          class="skeleton-rectangle skeletonRectangle radius-md height-auto width-full-width darker animated"
                        />
                      </div>
                    </div>
                    <div
                      class="flex items-center justify-center relative after:absolute pe-[20px] xxxl:pe-[28px] after:bg-neutral-300 after:h-xxs after:w-xxs after:rounded-full after:right-xs xxxl:after:right-x last-of-type:after:hidden last-of-type:pe-0"
                    >
                      <div
                        class="flex"
                      >
                        <div
                          class="flex align-center justify-center grow-0 shrink-0 bg-white outline outline-1 outline-neutral-300 rounded-xs mr-xxs text-success-500 p-xxs"
                          data-testid="icon"
                        >
                          <div
                            class="h-sm w-sm"
                          />
                        </div>
                      </div>
                      <div
                        class="w-lg"
                      >
                        <div
                          class="skeleton-rectangle skeletonRectangle radius-md height-auto width-full-width darker animated"
                        />
                      </div>
                    </div>
                    <div
                      class="flex items-center justify-center relative after:absolute pe-[20px] xxxl:pe-[28px] after:bg-neutral-300 after:h-xxs after:w-xxs after:rounded-full after:right-xs xxxl:after:right-x last-of-type:after:hidden last-of-type:pe-0"
                    >
                      <div
                        class="flex"
                      >
                        <div
                          class="flex align-center justify-center grow-0 shrink-0 bg-white outline outline-1 outline-neutral-300 rounded-xs mr-xxs text-danger-500 p-xxs"
                          data-testid="icon"
                        >
                          <div
                            class="h-sm w-sm"
                          />
                        </div>
                      </div>
                      <div
                        class="w-lg"
                      >
                        <div
                          class="skeleton-rectangle skeletonRectangle radius-md height-auto width-full-width darker animated"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex items-center gap-sm xxxl:gap-base"
              >
                <div
                  class="flex justify-center items-center font-medium text-xxs xxxl:text-xs"
                >
                  <div
                    class="me-xxs xxxl:me-xs"
                  >
                    Statements:
                  </div>
                  <div
                    class="w-base h-base"
                  >
                    <div
                      class="skeleton-rectangle skeletonRectangle radius-md height-full-height width-full-width darker animated"
                    />
                  </div>
                </div>
                <div
                  class="flex"
                >
                  <div
                    class="flex align-center justify-center grow-0 shrink-0 !bg-white transition-colors !rounded-sm !border-white focus-visible:!border-primary-500 p-xxs"
                    data-testid="icon"
                  >
                    <div
                      class="h-base w-base"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </button>
        <div
          aria-labelledby="radix-0"
          data-orientation="vertical"
          data-state="closed"
          hidden=""
          id="radix-0"
          role="region"
          style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
        />
      </div>
      ,
    </div>
  </div>
</div>
`;

exports[`PlanGroupAccordionItem should render not expanded item correctly 1`] = `
<div>
  <div
    data-orientation="vertical"
  >
    <div
      data-orientation="vertical"
      data-state="closed"
    >
      <div
        class="relative rounded-sm border border-neutral-300 p-sm xxxl:p-base focus-visible:!border-secondary-500 focus-visible:border group hover:bg-neutral-200"
      >
        <button
          aria-controls="radix-1"
          aria-expanded="false"
          class="text-start w-full flex gap-base xxxl:gap-md focus-visible:outline-offset-4 cursor-pointer"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="closed"
          id="radix-1"
          type="button"
        >
          <div
            class="transition-all ease-out p-xxs shrink-0 w-[56px] h-[56px] rotate-[0deg] duration-[300ms]"
          >
            <div
              class="recharts-responsive-container"
              style="width: 100%; height: 100%; min-width: 0;"
            />
          </div>
          <div
            class="w-full focus-visible:!outline-secondary-500"
          >
            <div
              class="flex gap-base transition-[margin]"
            >
              <div
                class="mr-auto"
              >
                <h6
                  class="font-bold leading-base mb-xs max-w-[640px] xxxl:max-w-[840px]"
                >
                  NV - PERFORMANCE STANDARD 1.1 : DEMONSTRATE KNOWLEDGE OF THE HISTORY OF THE GRAPHIC  DESIGN FIELD 
                </h6>
                <div>
                  <div
                    class="flex"
                  >
                    <div
                      class="flex items-center justify-center relative after:absolute pe-[20px] xxxl:pe-[28px] after:bg-neutral-300 after:h-xxs after:w-xxs after:rounded-full after:right-xs xxxl:after:right-x last-of-type:after:hidden last-of-type:pe-0"
                    >
                      <div
                        class="flex"
                      >
                        <div
                          class="flex align-center justify-center grow-0 shrink-0 bg-white outline outline-1 outline-neutral-300 rounded-xs mr-xxs text-neutral-700 p-xxs"
                          data-testid="icon"
                        >
                          <div
                            class="h-sm w-sm"
                          />
                        </div>
                      </div>
                      <div
                        class="font-medium leading-lg mr-xxxs text-xxs xxxl:text-xs"
                      >
                        0
                        %
                      </div>
                      <div
                        class="text-xxs xxxl:text-xs leading-sm flex items-center text-font-secondary"
                      >
                        (
                        <div
                          class="flex"
                        >
                          <div
                            class="flex align-center justify-center grow-0 shrink-0 mr-xxxs"
                            data-testid="icon"
                          >
                            <div
                              class="h-x w-x"
                            />
                          </div>
                        </div>
                        0
                        )
                      </div>
                    </div>
                    <div
                      class="flex items-center justify-center relative after:absolute pe-[20px] xxxl:pe-[28px] after:bg-neutral-300 after:h-xxs after:w-xxs after:rounded-full after:right-xs xxxl:after:right-x last-of-type:after:hidden last-of-type:pe-0"
                    >
                      <div
                        class="flex"
                      >
                        <div
                          class="flex align-center justify-center grow-0 shrink-0 bg-white outline outline-1 outline-neutral-300 rounded-xs mr-xxs text-secondary-500 p-xxs"
                          data-testid="icon"
                        >
                          <div
                            class="h-sm w-sm"
                          />
                        </div>
                      </div>
                      <div
                        class="font-medium leading-lg mr-xxxs text-xxs xxxl:text-xs"
                      >
                        0
                        %
                      </div>
                      <div
                        class="text-xxs xxxl:text-xs leading-sm flex items-center text-font-secondary"
                      >
                        (
                        <div
                          class="flex"
                        >
                          <div
                            class="flex align-center justify-center grow-0 shrink-0 mr-xxxs"
                            data-testid="icon"
                          >
                            <div
                              class="h-x w-x"
                            />
                          </div>
                        </div>
                        0
                        )
                      </div>
                    </div>
                    <div
                      class="flex items-center justify-center relative after:absolute pe-[20px] xxxl:pe-[28px] after:bg-neutral-300 after:h-xxs after:w-xxs after:rounded-full after:right-xs xxxl:after:right-x last-of-type:after:hidden last-of-type:pe-0"
                    >
                      <div
                        class="flex"
                      >
                        <div
                          class="flex align-center justify-center grow-0 shrink-0 bg-white outline outline-1 outline-neutral-300 rounded-xs mr-xxs text-success-500 p-xxs"
                          data-testid="icon"
                        >
                          <div
                            class="h-sm w-sm"
                          />
                        </div>
                      </div>
                      <div
                        class="font-medium leading-lg mr-xxxs text-xxs xxxl:text-xs"
                      >
                        100
                        %
                      </div>
                      <div
                        class="text-xxs xxxl:text-xs leading-sm flex items-center text-font-secondary"
                      >
                        (
                        <div
                          class="flex"
                        >
                          <div
                            class="flex align-center justify-center grow-0 shrink-0 mr-xxxs"
                            data-testid="icon"
                          >
                            <div
                              class="h-x w-x"
                            />
                          </div>
                        </div>
                        1
                        )
                      </div>
                    </div>
                    <div
                      class="flex items-center justify-center relative after:absolute pe-[20px] xxxl:pe-[28px] after:bg-neutral-300 after:h-xxs after:w-xxs after:rounded-full after:right-xs xxxl:after:right-x last-of-type:after:hidden last-of-type:pe-0"
                    >
                      <div
                        class="flex"
                      >
                        <div
                          class="flex align-center justify-center grow-0 shrink-0 bg-white outline outline-1 outline-neutral-300 rounded-xs mr-xxs text-danger-500 p-xxs"
                          data-testid="icon"
                        >
                          <div
                            class="h-sm w-sm"
                          />
                        </div>
                      </div>
                      <div
                        class="font-medium leading-lg mr-xxxs text-xxs xxxl:text-xs"
                      >
                        0
                        %
                      </div>
                      <div
                        class="text-xxs xxxl:text-xs leading-sm flex items-center text-font-secondary"
                      >
                        (
                        <div
                          class="flex"
                        >
                          <div
                            class="flex align-center justify-center grow-0 shrink-0 mr-xxxs"
                            data-testid="icon"
                          >
                            <div
                              class="h-x w-x"
                            />
                          </div>
                        </div>
                        0
                        )
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex items-center gap-sm xxxl:gap-base"
              >
                <div
                  class="flex justify-center items-center font-medium text-xxs xxxl:text-xs"
                >
                  <div
                    class="me-xxs xxxl:me-xs"
                  >
                    Statements:
                  </div>
                  <div
                    class="flex justify-center items-center bg-neutral-200 group-hover:bg-white rounded-full min-w-[24px] min-h-[24px] xxxl:min-w-[32px] xxxl:min-h-[32px] px-xs py-xxs"
                  >
                    1
                  </div>
                </div>
                <div
                  class="flex"
                >
                  <div
                    class="flex align-center justify-center grow-0 shrink-0 !bg-white transition-colors !rounded-sm !border-white focus-visible:!border-primary-500 p-xxs"
                    data-testid="icon"
                  >
                    <div
                      class="h-base w-base"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </button>
        <div
          aria-labelledby="radix-1"
          data-orientation="vertical"
          data-state="closed"
          hidden=""
          id="radix-1"
          role="region"
          style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
        />
      </div>
      ,
    </div>
  </div>
</div>
`;
